--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"/>
       <link rel="stylesheet" href="style.css" />
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+      <link type="image/png" sizes="16x16" rel="icon" href="img/ico3.png">
 
 
     <title>ripetizioni Alessandro Pozzi</title>
