--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <div class="main__content">
       <h1>INFORMAZIONI</h1>
-      <h2>qual'è il costo?</h2>
+      <h2>qual è il costo?</h2>
       <p>i prezzi delle lezioni si aggirano intorno ai 15 euro all'ora in base a dove si svolgono.</p>
       <h2>dove posso incontrarti?</h2>
       <p>le lezioni si possono svolgere a casa mia, vostra oppure online.</p>
