--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="main__content">
       <h1>INFORMAZIONI</h1>
       <h2>qual è il costo?</h2>
-      <p>i prezzi delle lezioni si aggirano intorno ai 15 euro all'ora in base a dove si svolgono.</p>
+      <p>Il costo delle lezioni è di 15 euro all'ora per le sessioni individuali e di 10 euro all'ora per le lezioni di gruppo.</p>
       <h2>dove posso incontrarti?</h2>
       <p>le lezioni si possono svolgere a casa mia, vostra oppure online.</p>
       
