--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="hero__container">
     <h1 class="hero__heading"><span>CHI SONO?</span></h1>
     <p class="hero__description">Mi chiamo Alessandro Pozzi e sono uno studente del secondo anno di ingegneria informatica.</p>
-    <p class="hero__description">Offro un servizio di ripetizioni di matematica, fisica meccanica ed informatica.</p>
+    <p class="hero__description">Offro un servizio di ripetizioni di matematica, fisica ed informatica.</p>
     <button class="main__btn"><a href="#about">maggiori info</a></button>
   </div>
 </div>
